fix spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -147,7 +147,7 @@ header .colorlib-navbar-brand .colorlib-logo:focus {
 }
 
 .ftco-section {
-  padding: 5em 0;
+  padding: 2em 0;
 }
 
 .footer-logo img {
